--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ header {
     max-width: 1520px;
     margin: 0 auto;
 }
-.header-flex{
-    display:flex;
+.header-flex {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -19,7 +19,7 @@ header {
     justify-items: center;
     gap: 10px;
 }
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
     .grid-header {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
@@ -92,10 +92,8 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     grid-template-rows: 95%;
     row-gap: 5%;
-    
 }
 .nav-menu a {
-    
     align-self: center;
     justify-self: center;
     font-family: "PT Sans";
@@ -124,7 +122,6 @@ header {
         grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
         grid-template-rows: 8vh;
         row-gap: 2vh;
-        
     }
     .nav-menu a {
         align-self: center;
@@ -136,7 +133,7 @@ header {
         color: black;
         text-decoration: none;
     }
-    }
+}
 /*Section-1*/
 
 h1,
@@ -154,7 +151,7 @@ h2 {
     grid-template-columns: repeat(auto-fit, minmax(356px, 1fr));
     grid-template-rows: 100%;
     gap: 1%;
-    
+
     /* align-items: center;
     justify-items: center; */
 }
@@ -165,11 +162,9 @@ h2 {
     font-weight: 700;
     font-size: 18px;
     line-height: 23px;
-
     color: #000000;
     background: #f4f4f4;
     border-radius: 5px;
-    
 }
 @media screen and (max-width: 1468px) {
     .section-1 {
@@ -186,14 +181,13 @@ h2 {
         font-weight: 700;
         font-size: 18px;
         line-height: 23px;
-    
         color: #000000;
         background: #f4f4f4;
         border-radius: 5px;
     }
-    }
-.section-1_item-content{
-    margin:auto;
+}
+.section-1_item-content {
+    margin: auto;
 }
 /*Section2*/
 .section-2 {
@@ -204,17 +198,17 @@ h2 {
     column-gap: 30px;
     height: 30hv;
 }
-.section-2_item {
+.section-2_item,
+.section-3_item {
     border-radius: 10px;
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
     letter-spacing: 0.065em;
-    align-items: end;
 }
-
-.section-2_item a {
+.section-2_item a,
+.section-3_item a {
     text-decoration: none;
     color: #ffffff;
     background-color: #384685;
@@ -251,24 +245,71 @@ h2 {
 .section-2_item:nth-child(8) {
     background: url("../assets/image/main/table_chair.jpg") no-repeat;
 }
-.more {
-    height: 8vh;
-    margin-top: 3vh;
-    background: #f2f2f2;
-    border-radius: 5px;
-    text-align: center;
-    padding-top: 4vh;
+@media screen and (max-width: 1131px) {
+    .section-2 {
+        margin-left: 110px;
+    }
 }
-.more a {
-    font-family: "PT Sans";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 23px;
-    color: #1d1818;
-    text-decoration: none;
+@media screen and (max-width: 854px) {
+    .section-2 {
+        margin-left: 230px;
+    }
 }
+
 .section-1_item-content {
     padding-top: 17px;
     text-align: center;
+}
+.section-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    min-height: 760px;
+    gap: 12px;
+}
+.section-3_item:nth-child(1) {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+
+    background: url("../assets/image/main/gletcher_kitchen.jpg") no-repeat 50%;
+}
+.section-3_item:nth-child(2) {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+
+    background: url("../assets/image/main/denver.jpg") no-repeat 50%;
+}
+.section-3_item:nth-child(4) {
+    grid-row: 1 / 3;
+    grid-column: 3 / 4;
+
+    background: url("../assets/image/main/london-kitchen.jpg") no-repeat 50%;
+}
+.section-3_item:nth-child(3) {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+
+    background: url("../assets/image/main/ameli_kitchen.jpg") no-repeat;
+}
+.section-3_item a {
+    margin-top: 350px;
+}
+.section-3_item:last-child a {
+    margin-top: 740px;
+}
+@media screen and (max-width: 1023px) {
+    .section-3 {
+        margin-left: 220px;
+    }
+    .section-3_item:nth-child(4) {
+        display: none;
+    }
+}
+.instagram{
+    
+}
+.instagram img{
+    display:block;
+    margin:auto;
+    max-width: 100%;
 }
