--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,24 @@ h2 {
     .section-3_item:nth-child(4) {
         display: none;
     }
+    .section-3{
+        grid-template-columns: 1fr 1fr;
+    }
 }
+@media screen and (max-width: 767px){
+    .section-3{
+        grid-template-columns: 1fr;
+    }
+
+    .section-3_item:nth-child(3) {
+        display: none;
+    }
+    .section-3_item:nth-child(2) {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+    }
+}
+
 .instagram img{
     display:block;
     margin:auto;
