--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,11 @@ header {
         padding: 3vh 3vw 3vh 3vw;
     }
 }
-
 .header_item {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 23px;
+    font-size: 1.2em;
     color: #1d1818;
 }
 .header_item:first-child {
@@ -42,7 +40,7 @@ header {
 }
 .header_item:nth-child(4) {
     font-weight: 700;
-    font-size: 22px;
+    font-size: 1.6em;
 }
 .header_item:nth-child(1n + 5) img {
     display: block;
@@ -52,13 +50,13 @@ header {
     margin-top: 10px;
     margin-left: 25px;
     width: 177px;
-    height: 35px;
+    min-height: 35px;
     border: 1px solid #e13b3f;
     border-radius: 5px;
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.2rem;
     color: #e13b3f;
 }
 .header_item button:hover {
@@ -99,7 +97,7 @@ header {
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.35em;
     color: black;
     text-decoration: none;
 }
@@ -113,7 +111,7 @@ header {
     background: #384685;
     border-radius: 5px;
     display: block;
-    height: 60px;
+    min-height: 60px;
     padding: 18px 5px 0px 5px;
 }
 @media screen and (max-width: 1519px) {
@@ -142,7 +140,6 @@ h2 {
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
-    line-height: 39px;
     padding: 54px 0 34px 0;
     color: #000000;
 }
@@ -151,9 +148,6 @@ h2 {
     grid-template-columns: repeat(auto-fit, minmax(356px, 1fr));
     grid-template-rows: 100%;
     gap: 1%;
-
-    /* align-items: center;
-    justify-items: center; */
 }
 .section-1_item {
     min-height: 100%;
@@ -161,7 +155,6 @@ h2 {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-    line-height: 23px;
     color: #000000;
     background: #f4f4f4;
     border-radius: 5px;
@@ -255,11 +248,11 @@ h2 {
         margin-left: 3%;
     }
 }
-
 .section-1_item-content {
     padding-top: 17px;
     text-align: center;
 }
+/*Section3*/
 .section-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -318,7 +311,6 @@ h2 {
         grid-column: 1 / 2;
     }
 }
-
 .instagram img{
     display:block;
     margin:auto;
