--- a/css/style.css
+++ b/css/style.css
@@ -86,13 +86,13 @@ header {
     background: #a8d1e7;
 }
 .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-    grid-template-rows: 95%;
-    row-gap: 5%;
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    flex-wrap:wrap;
 }
 .nav-menu a {
-    align-self: center;
+    padding: 4vh 1vw 4vh 1vw;
     justify-self: center;
     font-family: "PT Sans";
     font-style: normal;
@@ -100,40 +100,19 @@ header {
     font-size: 1.35em;
     color: black;
     text-decoration: none;
+    margin-right: 2vw;
 }
 .nav-menu a:hover {
     color: #999999;
 }
-
 .nav-menu a:last-child {
     box-sizing: border-box;
     color: #ffffff;
     background: #384685;
     border-radius: 5px;
-    display: block;
-    min-height: 60px;
-    padding: 18px 5px 0px 5px;
-}
-@media screen and (max-width: 1519px) {
-    .nav-menu {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-        grid-template-rows: 8vh;
-        row-gap: 2vh;
-    }
-    .nav-menu a {
-        align-self: center;
-        justify-self: center;
-        font-family: "PT Sans";
-        font-style: normal;
-        font-weight: 700;
-        font-size: 20px;
-        color: black;
-        text-decoration: none;
-    }
+    margin-right: 0;
 }
 /*Section-1*/
-
 h1,
 h2 {
     font-family: "PT Sans";
@@ -144,13 +123,16 @@ h2 {
     color: #000000;
 }
 .section-1 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(356px, 1fr));
-    grid-template-rows: 100%;
-    gap: 1%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .section-1_item {
-    min-height: 100%;
+    padding: 2vh 1vw 2vh 1vw;
+    margin-top: 1vh;
+    text-align: center;
+    align-self: center;
     font-family: "PT Sans";
     font-style: normal;
     font-weight: 700;
@@ -158,29 +140,8 @@ h2 {
     color: #000000;
     background: #f4f4f4;
     border-radius: 5px;
-}
-@media screen and (max-width: 1468px) {
-    .section-1 {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(356px, 1fr));
-        grid-template-rows: 15vh;
-        column-gap: 2vh;
-        row-gap: 2vw;
-    }
-    .section-1_item {
-        min-height: 17vh;
-        font-family: "PT Sans";
-        font-style: normal;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 23px;
-        color: #000000;
-        background: #f4f4f4;
-        border-radius: 5px;
-    }
-}
-.section-1_item-content {
-    margin: auto;
+    min-width: 320px;
+    min-height: 80px;
 }
 /*Section2*/
 .section-2 {
@@ -248,10 +209,6 @@ h2 {
         margin-left: 3%;
     }
 }
-.section-1_item-content {
-    padding-top: 17px;
-    text-align: center;
-}
 /*Section3*/
 .section-3 {
     display: grid;
@@ -263,25 +220,21 @@ h2 {
 .section-3_item:nth-child(1) {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-
     background: url("../assets/image/main/gletcher_kitchen.jpg") no-repeat 50%;
 }
 .section-3_item:nth-child(2) {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-
     background: url("../assets/image/main/denver.jpg") no-repeat 50%;
 }
 .section-3_item:nth-child(4) {
     grid-row: 1 / 3;
     grid-column: 3 / 4;
-
     background: url("../assets/image/main/london-kitchen.jpg") no-repeat 50%;
 }
 .section-3_item:nth-child(3) {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-
     background: url("../assets/image/main/ameli_kitchen.jpg") no-repeat;
 }
 .section-3_item a {
@@ -302,7 +255,6 @@ h2 {
     .section-3{
         grid-template-columns: 1fr;
     }
-
     .section-3_item:nth-child(3) {
         display: none;
     }
@@ -310,6 +262,7 @@ h2 {
         grid-row: 2 / 3;
         grid-column: 1 / 2;
     }
+    
 }
 .instagram img{
     display:block;
