--- a/css/style.css
+++ b/css/style.css
@@ -220,12 +220,12 @@ h2 {
 .section-3_item:nth-child(1) {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-    background: url("../assets/image/main/gletcher_kitchen.jpg") no-repeat 50%;
+    background: url("../assets/image/main/gletcher_kitchen.jpg") no-repeat;
 }
 .section-3_item:nth-child(2) {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    background: url("../assets/image/main/denver.jpg") no-repeat 50%;
+    background: url("../assets/image/main/denver.jpg") no-repeat;
 }
 .section-3_item:nth-child(4) {
     grid-row: 1 / 3;
@@ -254,6 +254,7 @@ h2 {
 @media screen and (max-width: 767px){
     .section-3{
         grid-template-columns: 1fr;
+        margin-left: 3%;
     }
     .section-3_item:nth-child(3) {
         display: none;
@@ -262,7 +263,6 @@ h2 {
         grid-row: 2 / 3;
         grid-column: 1 / 2;
     }
-    
 }
 .instagram img{
     display:block;
